--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@react-spring/parallax": "^9.2.3",
+    "@react-spring/web": "^9.2.3",
     "@reduxjs/toolkit": "^1.6.0",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.1",
@@ -14,6 +16,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.4",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.3.0",
     "styled-components": "^5.3.0"
