--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "technigo-react-starter",
+  "name": "react-starter",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
@@ -12,10 +12,8 @@
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^2.3.0",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0",
     "react-redux": "^7.2.4",
     "react-reveal": "^1.2.2",
-    "react-router-dom": "^5.2.0",
     "react-scripts": "^3.3.0",
     "styled-components": "^5.3.0"
   },
